# Lys

./: .clang-tidy  .gitignore  .vcpkg-configuration.json  CMakeLists.txt  CMakePresets.json  README.md  project.lys  vcpkg.json
demo/: CMakeLists.txt
demo/rsc/: banjo_frog.mtl
demo/scripts/: player.jl
demo/shaders/: frag_test.frag  vert_test.vert
demo/src/: main.cpp  player.cppm  vertices.cppm
scripts/: linux-install.sh  macos-install.zsh
src/: lys.cppm
src/core/: timer.cppm
src/core/io/: file.cppm  scene_serializer.cppm  shader_loader.cppm
src/core/math/: math.cppm  vector.cppm
src/core/scripting/julia/: julia_engine.cppm  julia_script.cppm
src/core/scripting/julia/bindings/: julia_node_bindings.cppm  lys.jl
src/interfaces/: renderer.cppm  window_interface.cppm
src/main/: app.cppm  entry.cpp  main.cpp
src/platform/: gl_window.cppm  input_manager.cppm  platform_interfaces.cppm  vk_window.cppm  window.cppm
src/platform/inputs/: input_event.cppm  input_manager.cppm  input_map.cppm
src/rendering/: mesh.cppm  renderer.cppm  rendering.cppm  shader.cppm  texture.cppm
src/rendering/opengl/: gl_renderer.cppm  gl_shader.cppm  gl_texture.cppm  gl_vertex_array.cppm  opengl.cppm  opengl_shader.cppm  shader.cppm
src/rendering/vulkan/: vk_renderer.cppm  vulkan.cppm
src/scene/: serialize.cppm  update_manager.cppm
src/scene/node/: node.cppm
src/scene/node/node_2d/: node_2d.cppm
src/scene/node/node_3d/: camera_3d.cppm  characeter_3d.cppm  node_3d.cppm
src/utils/: macros.cpp  macros.hpp  utils.cppm
